<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/teal_200">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/userNameET3"
            android:layout_width="329dp"
            android:layout_height="45dp"
            android:autofillHints=""
            android:hint="@string/enter_old_password"
            tools:ignore="MissingConstraints,TextFields"
            android:textColor="@color/white"
            tools:layout_editor_absoluteX="41dp"
            tools:layout_editor_absoluteY="146dp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/userNameET2"
            android:layout_width="329dp"
            android:layout_height="45dp"
            android:autofillHints=""
            android:hint="@string/re_enter_password"
            android:textColor="@color/white"
            tools:ignore="MissingConstraints,TextFields"
            tools:layout_editor_absoluteX="41dp"
            tools:layout_editor_absoluteY="290dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_recover"
        android:textColor="@color/red"
        android:textSize="25sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="85dp"
        tools:layout_editor_absoluteY="54dp"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/Enterbnt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_1"
        android:text="@string/enter"
        android:textColor="@color/white"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="261dp"
        tools:layout_editor_absoluteY="386dp" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/userNameET1"
        android:layout_width="329dp"
        android:layout_height="45dp"
        android:autofillHints=""
        android:hint="@string/enter_new_password"
        tools:ignore="MissingConstraints,TextFields"
        tools:layout_editor_absoluteX="41dp"
        tools:layout_editor_absoluteY="221dp" />

</androidx.constraintlayout.widget.ConstraintLayout>

